--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <!-- 🔹 Google Search Console verification tag goes here -->
     <!-- Example: <meta name="google-site-verification" content="PASTE_YOUR_CODE_HERE" /> -->
-
+    <meta name="google-site-verification" content="UjSpgmm2Dunpx2A87lA1XkOoqxx_I3sNBRovGy4OHlg" />
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:title" content="SavrDeals — Hot Deals of the Day">
     <meta property="og:description" content="Top discounts across e-commerce platforms. Scroll, discover, buy at the best price.">
