--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:title" content="SavrDeals — Hot Deals of the Day">
     <meta property="og:description" content="Top discounts across e-commerce platforms. Scroll, discover, buy at the best price.">
-    <meta property="og:image" content="/savrdeals-new-logo.png">
-    <meta property="og:url" content="https://savr-officialdeals.netlify.app">
+    <meta property="og:image" content="/savrdeals-logo.png">
+    <meta property="og:url" content="https://savr-deals.vercel.app">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
