--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     <meta name="twitter:image" content="/savrdeals-new-logo.png">
 
     <link rel="icon" href="/favicon.ico" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XF0M4GXFGV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XF0M4GXFGV');
+</script>
+
+    
   </head>
 
   <body class="bg-gray-50">
